_sass/skeleton.scss
* {
  box-sizing: border-box;

  margin: 0px;
  padding: 0px;

  -webkit-font-smoothing: antialiased;
  
  font-family: "Source Sans Pro", sans-serif;
  font-size: 18px;
  
  color: #202020;
}

*::selection {
  background-color: #0A1F3012;
}

.skeleton-centralizer {
  max-width: 800px;

  margin: 0px auto;
  padding: 0px 15px;
}

.skeleton-titles-positioner {
  margin: 120px 0px;
}

.skeleton-title {
  margin-top: 0px;

  font-size: 2.5em;
  font-weight: 600;

  text-align: center;
}

.skeleton-subtitle {
  margin-top: 1.2em;

  font-size: 1.2em;
  font-weight: 400;

  text-align: center;

  color: #0A1F3090;
}

@media screen and (max-width: 800px) {
  .skeleton-titles-positioner {
    margin: 80px 0px;
  }

  .skeleton-title {
    font-size: 2.0em;
  }

  .skeleton-subtitle {
    font-size: 1.1em;
  }
}

p {
  margin-top: 1.0em;

  line-height: 27px;

  text-align: justify;
}

h1 {
  margin-top: 1.5em;

  font-size: 1.6em;
  font-weight: 600;
}

h2, h3, h4, h5, h6 {
  margin-top: 1.6em;

  font-size: 1.2em;
  font-weight: 600;
}

p a {
  padding: 3px 5px;
  margin: -3px -5px;

  text-decoration: none;
  color: #007CD7;

  border-radius: 5px;
}

p a:hover {
  background-color: #007CD722;
  transition: background-color 0.01s cubic-bezier(0,.92,.67,.99);
}

p a:active {
  background-color: #007CD744;
  transition: background-color 0.01s cubic-bezier(0,.92,.67,.99);
}

code {
  padding: 2px 8px;

  border: 1px solid #0A1F3020;
  border-radius: 10px;

  font-family: "Source Code Pro", monospace;
  font-size: 0.85em;
  
  color: #FF2B4E;
  
  background-color: #0A1F3009;
}

pre > code {
  display: block;

  margin-top: 1.0em;
  padding: 10px;

  color: #0A1F30CC;
}

img {
  display: block;

  width: 100%;
  max-width: 550px;

  margin: 1.4em auto 0px auto;

  border-radius: 25px;
}

hr {
  border: 2px solid #0A1F3010;
  border-radius: 2px;
}

